--- a/assets/index.css
+++ b/assets/index.css
@@ -763,16 +763,17 @@ footer {
 
 .footer_map {
     position: relative;
-    background-image: url("./images/map/map_bg.png");
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position-x: right;
-    width: 913px;
-    height: 568px;
+}
+
+.footer_map_image {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .footer_map_city_wrapper {
     position: absolute;
+    transform: translateY(-50%) translateX(-50%);
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -903,6 +904,15 @@ footer {
         margin-left: 0;
         width: 100%;
         height: auto;
+    }
+
+    .about_us_content_text .mobile_expanded_about_us_hide {
+        height: 0;
+        overflow: hidden;
+    }
+
+    .about_us_content_text .mobile_expand_about_us {
+        overflow: hidden;
     }
 
     .advisory_business {
@@ -1060,6 +1070,7 @@ footer {
 
     .form_wrapper {
         width: 100%;
+        z-index: 2;
     }
 
     .footer_block {
@@ -1070,9 +1081,8 @@ footer {
     }
 
     .footer_map {
-        transform: scale(0.8);
-        top: 0;
-        left: 0;
-        margin-left: -155px;
+        margin-top: -40px;
+        margin-left: -30px;
+        width: 170%;
     }
 }
